--- a/api/pubspec.yaml
+++ b/api/pubspec.yaml
@@ -9,10 +9,10 @@ environment:
 dependencies:
   dart_frog: ^1.0.0
   envied: ^0.5.3
+  supabase: ^2.0.8
 
 dev_dependencies:
   mocktail: ^1.0.0
   test: ^1.19.2
-  very_good_analysis: ^5.1.0
   envied_generator: ^0.5.3
   build_runner: ^2.4.8
