--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
     path: packages/models
   http: ^1.1.0
   web_socket_channel: ^2.4.0
+  dart_frog_web_socket: ^1.0.0
 
 dev_dependencies:
   flutter_test:
